apps/workloads/kustomize/frontend-nginx/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kustom-nginx
  name: kustom-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kustom-nginx
  strategy: 
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kustom-nginx
    spec:
      containers:
      - name: nginx
        image: docker.io/bitnami/nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
          name: http
        - containerPort: 8443
          protocol: TCP
          name: https
        resources:
          requests:
            memory: "16Mi"
            cpu: "10m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 20    
          periodSeconds: 10          
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 7
          failureThreshold: 3
